welcome.lessons.welcome.variables.Variables.scala.error
Variables:15: error: type mismatch;
 found   : Unit
 required: Boolean
while (nbPas=0)
            ^Variables:21: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas=0)
         ^